--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "my-app",
+  "name": "cultural-map",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "fortawesome": "^0.0.1-security",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fontawesome": "^1.7.1",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-unity-webgl": "^9.5.2",
+    "switch": "^0.0.0",
+    "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
